documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L13W32API USHORT __stdcall L13_IndirectRd(INT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_IndirectWr(USHORT value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntDisable(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntEnable(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntEnableCond(HCARD handleval);

L13W32API LPVOID __stdcall L13_IntGet(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntInstall(LPVOID hEvent,HCARD handleval);

L13W32API ULONG __stdcall L13_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);

L13W32API VOID __stdcall L13_IntReset(HCARD handleval);

L13W32API INT __stdcall L13_IntStatus(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntUninstall(HCARD handleval);

L13W32API USHORT __stdcall L13_IORdW(INT addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_IOWINRdW(USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_IOWrW(USHORT value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernDev(LPINT valueptr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernEnd(LPVOID vxdptr);

L13W32API ERRVAL __stdcall L13_KernIntClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntInstall(LPVOID hEvent,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntStatus(LPINT valueptr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntUninstall(HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIORdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIOWrW(USHORT value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMFillW(USHORT value,INT addrval,INT countval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMRdL(LPULONG valueptr,INT addrval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMRdsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMRdsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMRdW(LPUSHORT valueptr,INT addrval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMWrL(ULONG value,INT addrval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMWrsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMWrsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMWrW(USHORT value,INT addrval,INT bustype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernQuick(BOOL flag,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

L13W32API MSGADDR __stdcall L13_ListAddr(INT index,LISTADDR listaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header);

L13W32API MSGADDR __stdcall L13_ListBlockRd(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_ListBlockRdEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_ListBlockWr(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_ListBlockWrEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_ListClear(LISTADDR listaddr,HCARD handleval);

L13W32API LISTADDR __stdcall L13_ListConfig(ULONG configval,INT count,USHORT skipval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_ListConfigEx(ULONG configval,INT count,USHORT skipval,HCARD handleval);

L13W32API INT __stdcall L13_ListDataRdEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);

L13W32API INT __stdcall L13_ListDataWrEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_ListNextRd(ULONG listaddr,LPUSHORT header);

L13W32API MSGADDR __stdcall L13_ListNextWr(ULONG listaddr,LPUSHORT header);

L13W32API VOID __stdcall L13_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L13W32API VOID __stdcall L13_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L13W32API VOID __stdcall L13_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L13W32API VOID __stdcall L13_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L13W32API INT __stdcall L13_ListStatus(LISTADDR listaddr,HCARD handleval);

L13W32API ULONG __stdcall L13_MakeLong(USHORT valh,USHORT vall);

L13W32API ULONG __stdcall L13_Mask(ULONG dataval,USHORT cntval);

L13W32API VOID __stdcall L13_MEMWINFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

L13W32API USHORT __stdcall L13_MEMWINRdB(ULONG addrval,INT bustype,HCARD handleval);

L13W32API ULONG __stdcall L13_MEMWINRdL(ULONG addrval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINRdsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L13W32API USHORT __stdcall L13_MEMWINRdW(ULONG addrval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINWrB(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINWrsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L13W32API VOID __stdcall L13_MEMWINWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

L13W32API ULONG __stdcall L13_Mod(ULONG moda,ULONG modb);