documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.VB

    Public Declare Function L13_IndirectRd Lib "L13W32.DLL" Alias "_L13_IndirectRd@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_IndirectWr Lib "L13W32.DLL" Alias "_L13_IndirectWr@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_IntClear Lib "L13W32.DLL" Alias "_L13_IntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntDisable Lib "L13W32.DLL" Alias "_L13_IntDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntEnable Lib "L13W32.DLL" Alias "_L13_IntEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntEnableCond Lib "L13W32.DLL" Alias "_L13_IntEnableCond@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntGet Lib "L13W32.DLL" Alias "_L13_IntGet@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_IntInstall Lib "L13W32.DLL" Alias "_L13_IntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntRd Lib "L13W32.DLL" Alias "_L13_IntRd@12" (ByRef typevalval As UInt16, ByRef infoval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_IntReset Lib "L13W32.DLL" Alias "_L13_IntReset@4" (ByVal handleval As UInt32)
    Public Declare Function L13_IntStatus Lib "L13W32.DLL" Alias "_L13_IntStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntUninstall Lib "L13W32.DLL" Alias "_L13_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IORdW Lib "L13W32.DLL" Alias "_L13_IORdW@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_IOWINRdW Lib "L13W32.DLL" Alias "_L13_IOWINRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_IOWINWrW Lib "L13W32.DLL" Alias "_L13_IOWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_IOWrW Lib "L13W32.DLL" Alias "_L13_IOWrW@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_KernDev Lib "L13W32.DLL" Alias "_L13_KernDev@8" (ByRef valueptr As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernEnd Lib "L13W32.DLL" Alias "_L13_KernEnd@4" (ByVal vxdptr As IntPtr) As Int32
    Public Declare Function L13_KernIntClear Lib "L13W32.DLL" Alias "_L13_KernIntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernIntInstall Lib "L13W32.DLL" Alias "_L13_KernIntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernIntParam Lib "L13W32.DLL" Alias "_L13_KernIntParam@32" (ByVal clraddr As UInt32, ByVal clrwidth As UInt32, ByVal clrvalue As UInt32, ByVal stataddr As UInt32, ByVal statwidth As UInt32, ByVal statvalue As UInt32, ByVal statmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernIntStatus Lib "L13W32.DLL" Alias "_L13_KernIntStatus@8" (ByRef valueptr As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernIntUninstall Lib "L13W32.DLL" Alias "_L13_KernIntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernIORdW Lib "L13W32.DLL" Alias "_L13_KernIORdW@12" (ByRef valueptr As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernIOWrW Lib "L13W32.DLL" Alias "_L13_KernIOWrW@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMFillW Lib "L13W32.DLL" Alias "_L13_KernMEMFillW@20" (ByVal value As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMRdL Lib "L13W32.DLL" Alias "_L13_KernMEMRdL@16" (ByRef valueptr As UInt32, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMRdsL Lib "L13W32.DLL" Alias "_L13_KernMEMRdsL@20" (ByRef bufptr As UInt32, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMRdsW Lib "L13W32.DLL" Alias "_L13_KernMEMRdsW@20" (ByRef bufptr As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMRdW Lib "L13W32.DLL" Alias "_L13_KernMEMRdW@16" (ByRef valueptr As UInt16, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMWrL Lib "L13W32.DLL" Alias "_L13_KernMEMWrL@16" (ByVal value As UInt32, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMWrsL Lib "L13W32.DLL" Alias "_L13_KernMEMWrsL@20" (ByRef bufptr As UInt32, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMWrsW Lib "L13W32.DLL" Alias "_L13_KernMEMWrsW@20" (ByRef bufptr As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernMEMWrW Lib "L13W32.DLL" Alias "_L13_KernMEMWrW@16" (ByVal value As UInt16, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernQuick Lib "L13W32.DLL" Alias "_L13_KernQuick@8" (ByVal flag As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernStatus Lib "L13W32.DLL" Alias "_L13_KernStatus@12" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_KernStatusEx Lib "L13W32.DLL" Alias "_L13_KernStatusEx@16" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal index As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListAddr Lib "L13W32.DLL" Alias "_L13_ListAddr@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListAddrEx Lib "L13W32.DLL" Alias "_L13_ListAddrEx@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function L13_ListBlockRd Lib "L13W32.DLL" Alias "_L13_ListBlockRd@12" (ByRef buf As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListBlockRdEx Lib "L13W32.DLL" Alias "_L13_ListBlockRdEx@16" (ByRef buf As UInt16, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListBlockWr Lib "L13W32.DLL" Alias "_L13_ListBlockWr@12" (ByRef buf As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListBlockWrEx Lib "L13W32.DLL" Alias "_L13_ListBlockWrEx@16" (ByRef buf As UInt16, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListClear Lib "L13W32.DLL" Alias "_L13_ListClear@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListConfig Lib "L13W32.DLL" Alias "_L13_ListConfig@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListConfigEx Lib "L13W32.DLL" Alias "_L13_ListConfigEx@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_ListDataRdEx Lib "L13W32.DLL" Alias "_L13_ListDataRdEx@20" (ByRef buf As UInt16, ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListDataWrEx Lib "L13W32.DLL" Alias "_L13_ListDataWrEx@20" (ByRef buf As UInt16, ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListInit Lib "L13W32.DLL" Alias "_L13_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListNextRd Lib "L13W32.DLL" Alias "_L13_ListNextRd@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function L13_ListNextWr Lib "L13W32.DLL" Alias "_L13_ListNextWr@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Sub L13_ListPostRd Lib "L13W32.DLL" Alias "_L13_ListPostRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_ListPostWr Lib "L13W32.DLL" Alias "_L13_ListPostWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_ListPreRd Lib "L13W32.DLL" Alias "_L13_ListPreRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_ListPreWr Lib "L13W32.DLL" Alias "_L13_ListPreWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_ListStatus Lib "L13W32.DLL" Alias "_L13_ListStatus@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MakeLong Lib "L13W32.DLL" Alias "_L13_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function L13_Mask Lib "L13W32.DLL" Alias "_L13_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub L13_MEMWINFillW Lib "L13W32.DLL" Alias "_L13_MEMWINFillW@20" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_MEMWINRdB Lib "L13W32.DLL" Alias "_L13_MEMWINRdB@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_MEMWINRdL Lib "L13W32.DLL" Alias "_L13_MEMWINRdL@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_MEMWINRdsL Lib "L13W32.DLL" Alias "_L13_MEMWINRdsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_MEMWINRdsW Lib "L13W32.DLL" Alias "_L13_MEMWINRdsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_MEMWINRdW Lib "L13W32.DLL" Alias "_L13_MEMWINRdW@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MEMWINWrB Lib "L13W32.DLL" Alias "_L13_MEMWINWrB@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_MEMWINWrL Lib "L13W32.DLL" Alias "_L13_MEMWINWrL@16" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_MEMWINWrsL Lib "L13W32.DLL" Alias "_L13_MEMWINWrsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_MEMWINWrsW Lib "L13W32.DLL" Alias "_L13_MEMWINWrsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_MEMWINWrW Lib "L13W32.DLL" Alias "_L13_MEMWINWrW@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_Mod Lib "L13W32.DLL" Alias "_L13_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
